# DataCollection

./: CMakeLists.txt  prj.conf
boards/: xiao_ble.overlay
drivers/bma400/: bma400.c  bma400_defs.h
include/: ble_data_service.h
include/app/: app.h  app_commands.h  app_context.h  app_session.h  app_state.h
include/sensor/: bma400_app.h
include/step/: step_types.h
include/transport/: ble_data_service.h  ble_protocol.h
src/: ble_data_service.c  bma400.h  bma400_app.c  main.c
src/app/: app.c  app_commands.c  app_session.c  app_state.c
src/sensor/: bma400_app.c
src/transport/: ble_data_service.c
